--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     <script>
       //Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: "AIzaSyBYV9kWljd-8zlRsYSLGIv2zBX4MhkNAo8",
-        authDomain: "multiplayer-car-racing-game.firebaseapp.com",
-        databaseURL: "https://multiplayer-car-racing-game.firebaseio.com",
-        projectId: "multiplayer-car-racing-game",
-        storageBucket: "",
-        messagingSenderId: "936147099930",
-        appId: "1:936147099930:web:dba47c5bb648f4ef"
-      };
+    apiKey: "AIzaSyCeNd2pnIRWQRRIRz9C7hd8XqKsZwl6jzA",
+    authDomain: "car-racing-game-2c6cd.firebaseapp.com",
+    databaseURL: "https://car-racing-game-2c6cd.firebaseio.com",
+    projectId: "car-racing-game-2c6cd",
+    storageBucket: "car-racing-game-2c6cd.appspot.com",
+    messagingSenderId: "409506988486",
+    appId: "1:409506988486:web:9dc42fc1feb262c1b3f2c7",
+    measurementId: "G-KZGV080T6N"
+  };
       // // Initialize Firebase
       // firebase.initializeApp(firebaseConfig);
 
